--- a/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="BenchmarkDotNet" Version="0.13.9" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="StringOperations\" />
+    </ItemGroup>
+
 </Project>
