--- a/Fundamentals.Tests/Fundamentals.Tests.csproj
+++ b/Fundamentals.Tests/Fundamentals.Tests.csproj
@@ -33,4 +33,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="StringOperations\" />
+    </ItemGroup>
+
 </Project>
