--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,10 @@ x86/
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
-**/[Oo]bj/
+[Oo]bj/
 [Ll]og/
 [Ll]ogs/
+obj
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -498,6 +499,7 @@ $RECYCLE.BIN/
 **/.idea/**/*.iml
 **/.idea/**/contentModel.xml
 **/.idea/**/modules.xml
+.idea/
 
 *.suo
 *.user
